--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,17 @@ body {
   text-decoration: none;
 }
 
+.unselectable {
+  -webkit-touch-callout: none; /* iPhone OS, Safari */
+  -webkit-user-select: none; /* Chrome, Safari 3 */
+  -khtml-user-select: none; /* Safari 2 */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
+  user-select: none; /* Possível implementação no futuro */
+  pointer-events: none;
+  cursor: default;
+}
+
 @media screen and (max-width: 1200px) {
   .detail-image {
     width: 300px;
